# renderer

./: .gitignore  Cargo.toml  README.md  design_thoughts.md  mac-env.sh
src/: main.rs  renderer.rs  timing.rs  utils.rs
src/components/: camera.rs  color.rs  config.rs  mesh.rs  mod.rs  texture.rs  transform.rs
src/data/shaders/: standard.frag  standard.vert  standard.vert.old  ui.frag  ui.vert
src/events/: application_events.rs  event_handler.rs  mod.rs
src/primitives/: drawable.rs  geometry.rs  mod.rs  rect.rs  uniform_buffer_object.rs  vertex.rs
src/primitives/three_d/: cube.rs  mod.rs  model.rs
src/primitives/two_d/: mod.rs  quad.rs  widget.rs
src/render_layers/: mod.rs  render_layer.rs  scene_layer.rs  ui_layer.rs
src/renderer/: allocator.rs  backend.rs  core.rs  drawer.rs  mod.rs  presenter.rs  render_key.rs  renderer.rs  types.rs  ui_draw_data.rs
src/systems/: rotation.rs
src/utils/: asset_loading.rs  mod.rs  vk_creation.rs
src/xr/: xr.rs
