[package]
name = "rendering_engine"
version = "0.1.0"
authors = ["Matthew Russo <mcr431@nyu.edu>"]
edition = "2018"

[features]
default = []
metal = ["gfx-backend-metal"]
gl = ["gfx-backend-gl"]
dx12 = ["gfx-backend-dx12"]
vulkan = ["gfx-backend-vulkan"]

[dependencies]
glsl-to-spirv = "0.1.4"
gfx-hal = "0.1"
gfx-backend-empty = "0.1"
winit = "0.18.0"
image = "0.20.1"
tobj = "0.1.6"
specs = "0.14.3"
cgmath = "0.17.0"
rand = "0.6.4"
uuid = { version = "0.7", features = ["v4"] }

[dependencies.gfx-backend-gl]
version = "0.1"
features = ["glutin"]
optional = true

[dependencies.gfx-backend-vulkan]
version = "0.1"
optional = true

[target.'cfg(any(target_os = "macos", all(target_os = "ios", target_arch = "aarch64")))'.dependencies.gfx-backend-metal]
version = "0.1"
optional = true

[target.'cfg(windows)'.dependencies.gfx-backend-dx12]
version = "0.1"
optional = true
