[package]
name = "rendering_engine"
version = "0.1.0"
authors = ["Matthew Russo <mcr431@nyu.edu>"]
edition = "2018"

[features]
default = []
metal = ["gfx-backend-metal"]
gl = ["gfx-backend-gl"]
dx12 = ["gfx-backend-dx12"]
vulkan = ["gfx-backend-vulkan"]

[dependencies]
itertools = "0.8.2"
glsl-to-spirv = "0.1.7"
gfx-hal = { version = "0.4.1", path = "../gfx/src/hal" }
gfx-backend-empty = { version = "0.4.0", path = "../gfx/src/backend/empty" }
winit = { version = "0.22.0", features = ["web-sys"], path = "../winit" }
image = "0.21.1"
legion = "0.1.1"
tobj = "0.1.7"
cgmath = "0.17.0"
rand = "0.6.4"
uuid = { version = "0.7", features = ["v4"] }
log = "0.4.6"
env_logger = "0.6.1"
openxr = { version = "0.12.0", features = ["loaded"] }
cmake = "0.1.42"
ash = "0.29.0"

[dependencies.gfx-backend-gl]
version = "0.4.0"
path = "../gfx/src/backend/gl"
features = ["glutin"]
optional = true

[dependencies.gfx-backend-vulkan]
version = "0.4.0"
path = "../gfx/src/backend/vulkan"
optional = true
features = ["x11"]

[target.'cfg(any(target_os = "macos", all(target_os = "ios", target_arch = "aarch64")))'.dependencies.gfx-backend-metal]
version = "0.4.0"
path = "../gfx/src/backend/metal"
optional = true

[target.'cfg(windows)'.dependencies.gfx-backend-dx12]
path = "../gfx/src/backend/dx12"
version = "0.4.0"
optional = true

[profile.release]
debug = true
